--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,12 @@
-.container {
+/* .container {
   width: 70%;
   margin-top: 30px;
   min-height: 500px;
   background: #f5f5f5;
   border-radius: 4px;
-}
+} */
 
-h2 {
-  font-size: 18px;
-  background: #3FB1DE;
-  padding: 15px;
-  color: #fff;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-}
 
-.chats {
-  height: 400px;
-  overflow-y: scroll;
-}
 
 /* input {
   width: 100%;
