--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -8,14 +8,17 @@
     top: 30px;
     box-shadow: 0 0 4px rgba(0,0,0,.2);
     background: #f5f5f5;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
     /* background:lightgrey; */
     /* height: 600px; */
 }
 
 .chat-header h2 {
-  font-size: 18px;
+  font-size: 19px;
   color: #fff;
   margin-bottom: 0;
+  font-weight: 800;
 
 }
 
